<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_choose_name">ChooseName</string>
    <string name="title_activity_choose_pet">ChoosePet</string>
    <string name="title_activity_choose_name2">ChooseName2</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="app_name">Pet App</string>
    <string name="action_settings">Settings</string>
    <string name="newGameButton">New Game</string>
    <string name="exitGameButton">Exit Game</string>
    <string name="tamagotchi">Tamagotchi 2.0</string>
    <string name="choosePetButton">Choose a pet here!</string>
    <string name="dogButton">Dog</string>
    <string name="catButton">Cat</string>
    <string name="dragonButton">Dragon</string>
    <string name="chooseNameButton">Name Your Pet</string>
    <string name="questionButton">Question</string>
    <string name="feedButton">Feed (-2)</string>
    <string name="petButton">Pet  (-1)</string>
    <string name="storeButton">Store</string>
    <string name="title_activity_question_screen">QuestionScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_store_screen">StoreScreen</string>
    <string name="bk_1">Change Background - 10 $</string>
    <string name="continueGameButton">Continue</string>
    <string name="question">How many days are in a week?</string>
    <string name="submitButton">Submit</string>
    <string name="storescreentitle">Store</string>
    <string name="ss_1">Beach Background - $10 </string>
    <string name="ss_2">Meadow Background - $30</string>
    <string name="ss_3">Forest Background - $50</string>
    <string name="ss_4">Add Trees to Beach - $ 20</string>
    <string name="ss_5">Add Trees to Meadow - $50</string>
    <string name="ss_6">Add Trees to Forest - $80</string>
    <string name="ss_7">Beach Mystery Item - $50</string>
    <string name="ss_8">Meadow Mystery Item - $100</string>
    <string name="ss_9">Forest Mystery Item - $150</string>

</resources>
