<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluedark"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tamagotchi"
        android:background="@color/bluedark"
    	android:textColor="@color/yellow"
        android:layout_weight="0"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="@color/yellow"
            android:onClick="newGame"
            android:text="@string/newGameButton"
            android:textColor="@color/bluedark"
            android:textSize="30sp"  />

        <Button
            android:id="@+id/button2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/yellow"
            android:layout_marginBottom="10dip"
            android:onClick="continueGame"
            android:text="@string/continueGameButton"
            android:textColor="@color/bluedark"
            android:textSize="30sp"  />

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@color/yellow"
            android:onClick="exitGame"
            android:text="@string/exitGameButton"
            android:textColor="@color/bluedark"
            android:textSize="30sp"  />

    </LinearLayout>

</LinearLayout>
  

    